登录注册的小bug